<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('courses', function (Blueprint $table) {
            $table->id();
            $table->foreignId('user_id')->constrained('users')->cascadeOnDelete();
            $table->foreignId('category_id')->nullable()->constrained('categories')->nullOnDelete();
            $table->json('title');
            $table->string('slug')->unique();
            $table->string('thumbnail')->nullable();
            $table->json('short_description')->nullable();
            $table->json('description')->nullable();
            $table->json('course_overview')->nullable();
            $table->json('what_you_learn')->nullable();
            $table->enum('level', ['beginner', 'intermediate', 'advanced'])->default('beginner');
            $table->enum('delivery_mode', ['online', 'offline', 'hybrid'])->default('online');
            $table->string('language', 20)->default('en');
            $table->decimal('price', 10, 2)->default(0);
            $table->string('currency', 10)->default('EGP');
            $table->unsignedInteger('duration_hours')->nullable();
            $table->unsignedInteger('seats_count')->nullable();
            $table->date('start_date')->nullable();
            $table->date('end_date')->nullable();
            $table->enum('status', ['draft', 'published', 'closed', 'archived'])->default('draft');
            $table->boolean('is_active')->default(true);
            $table->timestamps();

            $table->index(['status', 'is_active']);
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('courses');
    }
};
